Temporary fix for overflow on tables

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -165,3 +165,7 @@ body{
 .popover-x{
     padding: 15px !important;
 }
+
+.table-responsive{
+    overflow-x: auto !important;
+}
